[package]
name = "batch-json"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.20", features = ["json"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.98"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4.41", features = ["alloc", "local-offset"] }

